tests/sksl/errors/UndefinedFunction.dsl.glsl
### Compilation failed:

error: function 'int foo(int x)' is not defined

1 error
